@@ -2,6 +2,8 @@ List of user-visible changes of Ratfor Testsuite.
 
 New in 0.9f
 -----------
+ * Fixed a bug which prevented the tests scripts to work with Heirloom Sh
+   and/or Solaris Sh.
  * Silent rules in the Makefiles are not enabled by default anymore.
  * With Zsh version 4.x or later, it's now possible to run the test scripts
    with just e.g. `zsh foo.test', without needing to use the Zsh option
